--- a/refs.bib
+++ b/refs.bib
@@ -533,7 +533,7 @@
 @article{harary1974line,
   title={Line graphs of bipartite graphs},
   author={Harary, F and Holzmann, C},
-  journal={Revista De La Sociedad Matematica De Chile,},
+  journal={Revista de La Sociedad Matematica de Chile},
   volume={1},
   number={1},
   pages={19--22},
